FIN projet2 sans responsive

--- a/html/index.html
+++ b/html/index.html
@@ -38,9 +38,9 @@
                 <div id="bleu"></div><div id="violet"></div><div id="vert"></div>
                 </div>
                 <img id="manifestant" src="../image/manifestant.png">
-                <h2 id="soustitre1">Pete talks about live on tour</h2>
-                <h3 id="date1">JAN 20, 2022</h3><p id="tour">TOUR</p>
-                <p id="paragraphe1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2 class="soustitre1">Pete talks about live on tour</h2>
+                <h3 class="date1">JAN 20, 2022</h3><p class="tour">TOUR</p>
+                <p class="paragraphe1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div id="traitbleu"></div> <p id="readmore">read more</p>
             </div>
         
@@ -54,12 +54,154 @@
             </div>
             <div id="news3">
                 <img id="smoke" src="../image/fumer.png">
+                <h2 class="soustitre1">Pete talks about live on tour</h2>
+                <h3 class="date1">JAN 20, 2022</h3><p class="tour">TOUR</p>
+                <p class="paragraphe1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="traitbleu3"></div> <p id="readmore3">read more</p>
             </div>
         </div>
         <div id="bloc2">
-
+            <div id="news4">
+                <img id="chanteur" src="../image/chanteur.png">
+                <h2 class="soustitre1">Pete talks about live on tour</h2>
+                <p class="date1">JAN 20, 2022</p><img id="bulles" src="../image/bulles.png">
+                <p class="paragraphe1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="traitbleu3"></div> <p id="readmore4">read more</p>
+            </div>
+            <div id="news5">
+                <img id="sorciere" src="../image/sorciere.png">
+                <h2 class="soustitre1">Pete talks about live on tour</h2>
+                <p class="date1">JAN 20, 2022</p>
+                <p class="paragraphe1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="traitbleu3"></div> <p id="readmore4">read more</p>
+            </div>
+            <div>
+                    <h2 id="zbeub" class="soustitre1">Pete talks about live on tour</h2>
+                    <p class="date1">JAN 20, 2022</p>
+                    <p class="paragraphe1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <div class="traitbleu3"></div> <p id="readmore4">read more</p>
+            </div>
+        </div>
+        <button id="button2">Load More</button>
+    </article>
+    <article id="article3">
+        <img id="fond" src="../image/fond.png">
+        <h1 id="mimusic">Listen to MIMUSIC </h1>
+        <div id="traitmulticolor2">
+            <div id="bleu2"></div><div id="violet2"></div><div id="vert2"></div>
+        </div>
+        <p id="pmimusic">For all the latest performances find us on Spotify</p>
+        <div id="block1">
+            <img id="singer" src="../image/chanteur.png">
+            <img id="carrejaune" src="../image/carrejaune.png">
+            <img id="carrebleu" src="../image/carrebleu.png">
+        </div>
+        <div id="block2">
+            <img id="album3" src="../image/album3.png">
+            <p id="allfalldown">All Falls Down</p>
+            <img id="album2" src="../image/album2.png">
+            <p id="letmedown">don‘t let me down</p>
+            <p id="annee">2049</p>
+        </div>
+        <div id="block3">
+            <img id="petitcarre" src="../image/petitcarre.png">
+            <img id="grandcarrebleu" src="../image/grandcarrebleu.png">
+            <img id="album1" src="../image/album1.png">
+        </div>
+        <p id="viewalbum">View all albums ::</p>
+        <img id="bubbles" src="../image/bulles2.png">
+    </article>
+    <article id="article4">
+        <img id="fondguitariste" src="../image/fondguitariste.png">
+        <div id="rectangle1">
+            <p id="beingsocial">Being Social ::</p>
+            <div id="traitmulticolor3">
+                <div id="bleu3"></div><div id="violet3"></div><div id="vert3"></div>
+            </div>
+            <ul id="ulguitar">
+                <li class="listeguitar">All</li>
+                <li class="listeguitar">facebook</li>
+                <li class="listeguitar">twitter</li>
+                <li class="listeguitar">youtube</li>
+                <li class="listeguitar">instagram</li>
+            </ul>
+        </div>
+        <div id="rectangle2">
+            <div id="filtre1">
+               <p class="allawalker">Allan Walker - All Falls Downs (MI Music Remix)</p>
+               <img id="logoytb" src="../image/logoytb.png">
+                    <div id="droiteytb">
+                        <p class="mimusic2">MI MUSIC</p>
+                        <p class="date2">10 Jan 2022</p>
+                    </div>
+            </div>
+            
+            <div id="filtre2">
+                <img id="concert" src="../image/concert.png">
+                <p class="pconcert">Customers make decisions in seconds. How the right tools & data can</p>
+                <p class="pconcert"> #MakeItAnExperience in the moments that matter:</p>
+                <a class="lienconcert" href="https://adobe.ly/2CY2Tx3" target="blanck"> https://adobe.ly/2CY2Tx3 </a>
+                <div>
+                <img id="logofacebook" src="../image/logofacebook.png">
+                <div id="droitefacebook">
+                    <p class="mimusic2">MI MUSIC</p>
+                    <p class="date2">10 Jan 2022</p>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div id="rectangle3">
+            <div id="filtre3">
+                <img id="bannieremeuf" src="../image/bannieremeuf.png">
+                <p class="pconcert">Customers make decisions in seconds. How the right tools & data can</p>
+                <p class="pconcert"> #MakeItAnExperience in the moments that matter:</p>
+                <a class="lienconcert" href="https://adobe.ly/2CY2Tx3" target="blanck"> https://adobe.ly/2CY2Tx3 </a>
+                <div>
+                    <img id="logotwitter" src="../image/logotwitter.png">
+                    <div id="droitetwitter">
+                        <p class="mimusic2">MI MUSIC</p>
+                        <p class="date2">10 Jan 2022</p>
+                    </div>
+                </div>
+            </div>
+            <div id="filtre4">
+                <p class="allawalker">Allan Walker - All Falls Downs (MI Music Remix)</p>
+                <div>
+                    <img id="logoyoutube" src="../image/logoytb.png">
+                    <div id="rightytb">
+                        <p class="mimusic2">MI MUSIC</p>
+                        <p class="date2">10 Jan 2022</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </article>
+    <footer>
+        <img id="fondfooter" src="../image/fondfooter.png">
+        <h1 id="signup">Sign Up for Exclusives</h1>
+        <div id="traitmulticolor4">
+            <div id="bleu4"></div><div id="violet4"></div><div id="vert4"></div>
+        </div>
+        <p id="psignup">Sign up for latest news, exclusive offers and ticket pre-sales.</p>
+        <input id="input1" class="enjoy-css" placeholder="Name" />
+        <input id="input2" class="enjoy-css" placeholder="Email" />
+        <div id="ladivdulogo">
+        <img id="logo2" src="../image/logo.png"><p id="pdulogo">music.</p>
+        </div>
+        <ul id="ulfooter">
+            <li class="lifooter">Home</li>
+            <li class="lifooter">Live</li>
+            <li class="lifooter">Albums</li>
+            <li class="lifooter">News</li>
+            <li class="lifooter">About</li>
+        </ul>
+        <div id="awesome">
+            <i class="fab fa-facebook-square"></i>
+            <span class="Awesome"><i class="fab fa-twitter"></i></span>
+            <span class="Awesome"><i class="fab fa-instagram"></i></span>
+            <span class="Awesome"><i class="fab fa-youtube"></i></span>
+        </div>
+    </footer>
 </body>
 
 </html>
